@@ -2,6 +2,7 @@
 
     - simplified running a headless archive - see bin/runhttpserv.syndie
     - improved dependency tracking during syndication
+    - substantial bugfixes for syndication message selection
 
 * 2006-12-26  1.000a released
     - lets call a spade a spade
